--- a/project_1/index.html
+++ b/project_1/index.html
@@ -11,7 +11,7 @@
     rel="stylesheet">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-
+  <link rel="stylesheet" href="./food-near-me/style.scss">
   <link rel="stylesheet" href="./assets/style/style.css">
   <link rel="stylesheet" href="./assets/style/style-responsive.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -24,6 +24,25 @@
 
 <body>
   <main>
+    <section id="category" class="wrapper">
+      <div class="title">
+        <h3 class="title__content">Food near me</h3>
+        <img class="title__icon" src="./assets/icon/lua.svg" alt="anh icon">
+        <!-- <img src="./assets/icon/Button.svg" alt="anh icon"> -->
+      <div>
+      <div class="categories">
+            <div class="category">
+              <div class="category__content">
+                <p class="category__name">Pizza</p>
+                <p class="category__desription">Starting</p>
+                <b class="category__prite">$14.00</b>
+              </div>
+              <div>
+                <img class="category__image" src="./assets/img/pizza.png" alt="">
+              </div>
+            </div>
+      </div>
+    </section>
     <section class="food">
       <div class="container">
         <h3 class="title__sub">Popular Menu</h3>
@@ -205,57 +224,57 @@
         <div class="menu">
           <div class="card">
             <img src="" alt="">
-            <div class="card__img" >
-                <img src="./assets/img/Image.png" alt="">
+            <div class="card__img">
+              <img src="./assets/img/Image.png" alt="">
             </div>
-            <div class="card__body" >
-                <h3 class="body__name" >Riders</h3>
-                <p class="body__content">We store the vast majority of the digital assets in secure </p>
-                <div class="body__page" >
-                    <button class="page__name see-more see-more__center" >
-                      <span class="name__title">Apply Now</span>
-                      <i class="fa-solid fa-arrow-right name__icon"></i>
-                    </button>
-                </div>
-            </div>
-          </div>
-          <div class="card">
-            <img src="" alt="">
-            <div class="card__img" >
-                <img src="./assets/img/bolt.png" alt="">
-            </div>
-            <div class="card__body" >
-                <h3 class="body__name" >Restaurants</h3>
-                <p class="body__content">We store the vast majority of the digital assets in secure </p>
-                <div class="body__page" >
-                    <button class="page__name see-more see-more__red see-more__center" >
-                      <span class="name__title">Apply Now</span>
-    
-                      <i class="fa-solid fa-arrow-right name__icon"></i>
-                    </button>
-                </div>
+            <div class="card__body">
+              <h3 class="body__name">Riders</h3>
+              <p class="body__content">We store the vast majority of the digital assets in secure </p>
+              <div class="body__page">
+                <button class="page__name see-more see-more__center">
+                  <span class="name__title">Apply Now</span>
+                  <i class="fa-solid fa-arrow-right name__icon"></i>
+                </button>
+              </div>
             </div>
           </div>
           <div class="card">
             <img src="" alt="">
-            <div class="card__img" >
-                <img src="./assets/img/tim.png" alt="">
+            <div class="card__img">
+              <img src="./assets/img/bolt.png" alt="">
             </div>
-            <div class="card__body" >
-                <h3 class="body__name" >Community</h3>
-                <p class="body__content">We store the vast majority of the digital assets in secure </p>
-                <div class="body__page" >
-                    <button class="page__name see-more see-more__yellow see-more__center" >
-                      <span class="name__title">Apply Now</span>
-    
-                      <i class="fa-solid fa-arrow-right name__icon"></i>
-                    </button>
-                </div>
+            <div class="card__body">
+              <h3 class="body__name">Restaurants</h3>
+              <p class="body__content">We store the vast majority of the digital assets in secure </p>
+              <div class="body__page">
+                <button class="page__name see-more see-more__red see-more__center">
+                  <span class="name__title">Apply Now</span>
+
+                  <i class="fa-solid fa-arrow-right name__icon"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <img src="" alt="">
+            <div class="card__img">
+              <img src="./assets/img/tim.png" alt="">
+            </div>
+            <div class="card__body">
+              <h3 class="body__name">Community</h3>
+              <p class="body__content">We store the vast majority of the digital assets in secure </p>
+              <div class="body__page">
+                <button class="page__name see-more see-more__yellow see-more__center">
+                  <span class="name__title">Apply Now</span>
+
+                  <i class="fa-solid fa-arrow-right name__icon"></i>
+                </button>
+              </div>
             </div>
           </div>
 
-          </div>
         </div>
+      </div>
       </div>
 
       </div>
