--- a/coolmate/Coolmate.html
+++ b/coolmate/Coolmate.html
@@ -22,7 +22,7 @@
             <ul>
                 <li>
                     <a href="/?itm_source=navbar">
-                        <img src="https://www.coolmate.me/images/logo-coolmate-v2.svg" alt="logo-coolmate"
+                        <img src="https://www.coolmate.me/images/logo-coolmate-v2.svg" alt="logo-coolmate
                             class="topbar__logo">
                     </a>
                 </li>
