--- a/cv/index.html
+++ b/cv/index.html
@@ -1,54 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV</title>
     <link rel="stylesheet" href="./assets/style/style.scss">
+    <link rel="stylesheet" href="./assets/style/style.css">
 </head>
+<body class="srcollbar">
+    <div class="container">
+        <div class="page">
+            <section class="card information">
 
-<body>
-    <main>
-        <section class="header">
-            <div class="head">Bostami</div>
-            <div class="menu">
-                <img src="" alt="">
-                <p>About</p>
-            </div>
-        </section>
-        <section class="body">
-            <h1 class="introduce">About Me</h1>
-            <div class="title">
-                <img class="image" src="./assets/img/220772761_877435646242061_36110342791613177_n.jpg"
-                    alt="anh cua toi">
-                <p class="title__content">Who am i?</p>
-                <p class="title__below">I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web
-                    development and print
-                    media. I enjoy turning complex problems into simple, beautiful and intuitive designs.</p>
-                <p class="title__below">My aim is to bring across your message and identity in the most creative way. I
-                    created web design for
-                    many famous brand companies.</p>
-                <p class="title__content">Personal Info</p>
-                <div class="title__icon">
-                    <img src="" alt="">
-                    <p class="title__below">Phone</p>
-                    <p class="title__content">0935 233 857</p>
+                <img class="information__avartar" src="./assets/img/220772761_877435646242061_36110342791613177_n.jpg" alt="">
+                <div class="information__user">
+                    <p class="information__user__name">Lương Thế Thiện</p>
+                    <p class="information__user__position">NONE</p>
+                    <div class="information__user__icon">
+                        <a class="social__icon"  href="https://www.facebook.com/Kinn.309">
+                            <img src="./assets/icon/facebook.svg" alt="">
+                        </a>
+                        <a class="social__icon"  href="#">
+                            <img src="./assets/icon/tw.svg" alt="">
+                        </a>
+                        <a class="social__icon"  href="https://www.instagram.com/tthien_09/">
+                            <img src="./assets/icon/ig.svg" alt="">
+                        </a>
+                        <a class="social__icon"  href="#">
+                            <img src="./assets/icon/in.svg" alt="">
+                        </a>
+                    </div>
+                    <div class="information__user__info">
+                        <div class=" info">
+                            <img class="info__icon" src="./assets/icon/phone.svg" alt="">
+                            <div class="info__content">
+                                <p class="info__content__title">Phone</p>
+                                <p class="info__content__description">+84 935 233 857</p>
+                            </div>
+                        </div>
+                        <div class="line"></div>
+                        <div class="info">
+                            <img class="info__icon" src="./assets/icon/email.svg" alt="">
+                            <div class="info__content">
+                                <p class="info__content__title">Email</p>
+                                <p class="info__content__description">anhthiendn100@gmail.com</p>
+                            </div>
+                        </div>
+                        <div class="line"></div>
+                        <div class="info">
+                            <img class="info__icon" src="./assets/icon/loction.svg" alt="">
+                            <div class="info__content">
+                                <p class="info__content__title">Loction</p>
+                                <p class="info__content__description">Da Nang,</p>
+                            </div>
+                        </div>
+                        <div class="line"></div>
+                        <div class="info">
+                            <img class="info__icon" src="./assets/icon/birthday.svg" alt="">
+                            <div class="info__content">
+                                <p class="info__content__title">Birthday</p>
+                                <p class="info__content__description">Sep 30,2002</p>
+                            </div>
+                        </div>
+                    </div>
+                    <a class="information__btn" href="">
+                        <img class="information__btn__icon" src="./assets/icon/downloda.svg" alt="">
+                        <p class="information__btn__title">Download CV</p>
+                    </a>
                 </div>
-            </div>
-        </section>
-        <section>
-            <h1>What I do!</h1>
-            <div>
-                <img src="" alt="">
-                <p>Ui/Ux Design</p>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam euismod volutpat.</p>
-            </div>
-            <div>
-                <img src="" alt="">
-            </div>
-        </section>
-    </main>
+            </section>
+            <section class="card main">
+                <div class="bg-gray default-border-top">
+                    <div class="wrapper">
+                        <div class="wrapper__header">
+                            <div class="wrapper__header__title">Resume</div>
+                            <p class="linered"></p>
+                        </div>
+                        <div class="list__title">
+                            <img class="list__title__icon" src="./assets/icon/contact-red.svg" alt="">
+                            <p class="list__title__name" >About</p>
+                        </div>
+                        <ul>
+                            <li>
+                                Excellent team and time management skills with the goal of achieving the best results.
+                            </li>
+                            <li>
+                                Excellent team and time management skills with the goal of achieving the best results.
+                            </li>
+                            <li>
+                                Excellent team and time management skills with the goal of achieving the best results.
+                            </li>
+                            <li>
+                                Excellent team and time management skills with the goal of achieving the best results.
+                            </li>
+                            <li>
+                                Excellent team and time management skills with the goal of achieving the best results.
+                            </li>
+                            <li>
+                                Excellent team and time management skills with the goal of achieving the best results.
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+            <section class="card crossbar">
+                <a class="crossbar__item" href="">
+                    <img class="crossbar__item__icon" src="./assets/icon/contact.svg" alt="">
+                    <p class="crossbar__item__title">About</p>
+                </a>
+                <a class="crossbar__item" href="./assets/icon/education.svg">
+                    <img class="crossbar__item__icon" src="" alt="">
+                    <p class="crossbar__item__title">About</p>
+                </a>
+                <a class="crossbar__item" href="./assets/icon/experience-gray.svg">
+                    <img class="crossbar__item__icon" src="" alt="">
+                    <p class="crossbar__item__title">About</p>
+                </a>
+                <a class="crossbar__item" href="./assets/icon/history.svg">
+                    <img class="crossbar__item__icon" src="" alt="">
+                    <p class="crossbar__item__title">About</p>
+                </a>
+            </section>
+        </div>
+    </div>
+    
 </body>
-
 </html>
