--- a/cv/index.html
+++ b/cv/index.html
@@ -80,7 +80,7 @@
                             <img class="list__title__icon" src="./assets/icon/contact-red.svg" alt="">
                             <p class="list__title__name" >About</p>
                         </div>
-                        <ul>
+                        <ul class="list__content__description">
                             <li>
                                 Excellent team and time management skills with the goal of achieving the best results.
                             </li>
@@ -100,6 +100,56 @@
                                 Excellent team and time management skills with the goal of achieving the best results.
                             </li>
                         </ul>
+                    </div>
+                </div>
+                <div class="wrapper">
+                    <div class="wrapper__list">
+                        <div class="list__left" >
+                            <div class="list__title">
+                                <img class="list__title__icon" src="./assets/icon/icon.svg" alt="">
+                                <p class="list__title__name" >Education</p>
+                            </div>
+                            <div class="list__content">
+                                <div class="list__content__item bg--FFF4F4">
+                                    <p class="list__content__time">2021-2023</p>
+                                    <p class="list__content__location">Ph.D in Horriblensess - ABC University,</p>
+                                    <p class="list__content__address">Los Angeles, CA</p>
+                                </div>
+                                <div class="list__content__item bg--EEF5FA">
+                                    <p class="list__content__time">2021-2023</p>
+                                    <p class="list__content__location">Ph.D in Horriblensess - ABC University,</p>
+                                    <p class="list__content__address">Los Angeles, CA</p>
+                                </div>
+                                <div class="list__content__item bg--FCF4FF">
+                                    <p class="list__content__time">2021-2023</p>
+                                    <p class="list__content__location">Ph.D in Horriblensess - ABC University,</p>
+                                    <p class="list__content__address">Los Angeles, CA</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- <div class="list__right" >
+                            <div class="list__title">
+                                <img class="list__title__icon" src="./assets/icon/tuisach.svg" alt="">
+                                <p class="list__title__name" >Experience</p>
+                            </div>
+                            <div class="list__content">
+                                <div class="list__content__item bg--FFF4F4">
+                                    <p class="list__content__time">2021-2023</p>
+                                    <p class="list__content__location">Ph.D in Horriblensess - ABC University,</p>
+                                    <p class="list__content__address">Los Angeles, CA</p>
+                                </div>
+                                <div class="list__content__item bg--EEF5FA">
+                                    <p class="list__content__time">2021-2023</p>
+                                    <p class="list__content__location">Ph.D in Horriblensess - ABC University,</p>
+                                    <p class="list__content__address">Los Angeles, CA</p>
+                                </div>
+                                <div class="list__content__item bg--FCF4FF">
+                                    <p class="list__content__time">2021-2023</p>
+                                    <p class="list__content__location">Ph.D in Horriblensess - ABC University,</p>
+                                    <p class="list__content__address">Los Angeles, CA</p>
+                                </div>
+                            </div>
+                        </div> -->
                     </div>
                 </div>
             </section>
