--- a/cv/index.html
+++ b/cv/index.html
@@ -102,9 +102,9 @@
                         </ul>
                     </div>
                 </div>
-                <div class="wrapper">
-                    <div class="wrapper__list">
-                        <div class="list__left" >
+                <div class="article--body">
+                    <div class="article--body__list">
+                        <div class="list__left" id="education" >
                             <div class="list__title">
                                 <img class="list__title__icon" src="./assets/icon/icon.svg" alt="">
                                 <p class="list__title__name" >Education</p>
@@ -127,7 +127,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- <div class="list__right" >
+                         <div class="list__right">
                             <div class="list__title">
                                 <img class="list__title__icon" src="./assets/icon/tuisach.svg" alt="">
                                 <p class="list__title__name" >Experience</p>
@@ -149,7 +149,7 @@
                                     <p class="list__content__address">Los Angeles, CA</p>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
                     </div>
                 </div>
             </section>
@@ -158,17 +158,13 @@
                     <img class="crossbar__item__icon" src="./assets/icon/contact.svg" alt="">
                     <p class="crossbar__item__title">About</p>
                 </a>
-                <a class="crossbar__item" href="./assets/icon/education.svg">
-                    <img class="crossbar__item__icon" src="" alt="">
-                    <p class="crossbar__item__title">About</p>
+                <a class="crossbar__item" href="">
+                    <img class="crossbar__item__icon" src="./assets/icon/education.svg" alt="">
+                    <p class="crossbar__item__title">Education</p>
                 </a>
-                <a class="crossbar__item" href="./assets/icon/experience-gray.svg">
-                    <img class="crossbar__item__icon" src="" alt="">
-                    <p class="crossbar__item__title">About</p>
-                </a>
-                <a class="crossbar__item" href="./assets/icon/history.svg">
-                    <img class="crossbar__item__icon" src="" alt="">
-                    <p class="crossbar__item__title">About</p>
+                <a class="crossbar__item" href="">
+                    <img class="crossbar__item__icon" src="./assets/icon/experience-gray.svg" alt="">
+                    <p class="crossbar__item__title">Experience</p>
                 </a>
             </section>
         </div>
