--- a/cv/index.html
+++ b/cv/index.html
@@ -6,6 +6,7 @@
     <title>CV</title>
     <link rel="stylesheet" href="./assets/style/style.scss">
     <link rel="stylesheet" href="./assets/style/style.css">
+    <link rel="stylesheet" href="./assets/style/responsive.css">
 </head>
 <body class="srcollbar">
     <div class="container">
